# HalSample

./: CMakeLists.txt  README.md  create_vs.bat  haldemox.sln
haldemox/: CMakeLists.txt  HalBase.cpp  HalBase.h  HalGen10.cpp  HalGen10.h  HalGen11.cpp  HalGen11.h  HalGen9.cpp  HalGen9.h  ReadMe.txt  haldemox.cpp  haldemox.vcxproj  haldemox.vcxproj.filters  stdafx.cpp
scripts/: HeaderGenerator.py  code_clean.py
